<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Alkomat 3000</string>
    <string name="about_text" translatable="false">© 2021 AhiruSoftware\nAlkomat 3000 for
        Android\n\nEmoji artwork provided by EmojiOne.\nhttp://emojione.com/</string>
    <string name="per_mille" translatable="false">‰</string>
    <string name="ingredients">Ingredients:</string>
    <string name="female">f</string>
    <string name="pick_user">Pick a user</string>
    <string name="time_left">left</string>
    <string name="time_ago">elap.</string>
    <string name="about">About this app</string>
    <string name="remove_custom_mixture">Remove recipe?</string>
    <string name="remove_custom_recipe">Remove recipe?</string>
    <string name="remove_recipe">Remove\nrecipe</string>
    <string name="remove_mixture">Remove\nrecipe</string>
    <string name="add_recipe_button">Add recipe</string>
    <string name="recipes">Recipes</string>
    <string name="bacNoChar">Alcohol level</string>
    <string name="bac">Alcohol level</string>
    <string name="notification_alert">Alert</string>
    <string name="press_back_again_to_leave">Press back again to leave</string>
    <string name="create_new_user">Create a new user</string>
    <string name="name">Name</string>
    <string name="send_message">Send message*</string>
    <string name="message">Message</string>
    <string name="amount">Amount (ml)</string>
    <string name="male">m</string>
    <string name="height_with_unit">Height (cm)</string>
    <string name="height">Height</string>
    <string name="weight_with_unit">Weight (kg)</string>
    <string name="weight">Weight</string>
    <string name="no_information">n. i.</string>
    <string name="years">years</string>
    <string name="sex">Sex</string>
    <string name="wronginput">Error! Please correct your entries</string>
    <string name="error">Error</string>
    <string name="feedback_sent">Feedback sent!</string>
    <string name="feedback_sending">Sending feedback …</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="only_one_user_there">Only one user is present - choosing this one</string>
    <string name="email">E-Mail (Consult/Answers)</string>
    <string name="emailhint">E-Mail</string>
    <string name="add_recipe">Add a recipe</string>
    <string name="add_drink">Add a drink …</string>
    <string name="add_user">Add a user</string>
    <string name="image">Image</string>
    <string name="beer">Beer</string>
    <string name="age">Age</string>
    <string name="cancel">Abort</string>
    <string name="add_as_mixture">Save\nmixture</string>
    <string name="dialog_drink_question">What should happen with this drink?</string>
    <string name="edit_current_user">Edit current user</string>
    <string name="remove_current_user">Remove current user</string>
    <string name="percentage">Alcohol content (%)</string>
    <string name="consumed_drinks">Drank alcohol containing drinks</string>
    <string name="switch_mixtureimage">Select different image</string>
    <string name="you_selected">Selected:</string>
    <string name="edit_existing_user">Edit user</string>
    <string name="create_user">Create user</string>
    <string name="save_user">Save user</string>
    <string name="switch_user">Change user</string>
    <string name="description">Description</string>
    <string name="notification_text_current_bac">You have %l$s ‰ alcohol in your blood!</string>
    <string name="add_drink_button">Add\nDrink</string>
    <string name="remove_drink">Remove\nDrink</string>
    <string name="add_ingredient">Zutat hinzufügen</string>
    <string name="add_ingr_desc">A description, for example, how the ingredients are mixed together or which glass, which decoration can be used.</string>
    <string name="disclaimer">*By pressing \"send message\" you agree that the data entered above, information about your device (manufacturer, model, operating system and its version), your current IP-Address and the opt-in date as well as information about the app (version number, log files, stored mixtures/recipes) will be sent securely. Data beyond the one provided by you optional (Name, E-Mail-Address, Message) is used to ensure a better problem solving process and are stored until revocation and will be deleted after 10 years at the latest (except there are other valid lawfully retention periods). No other personal data (photos, videos, etc.) are sent! The name and the e-mail address are optional, but useful for inquiries/feedback. You can always contact us via e-mail (privacy-duck@outlook.com) about your saved data and request a copy, cancellation or rectification. In addition, you have the right to contact the data protection authority responsible for you (for example your national data protection officer).</string>
    <string name="beer_desc">Beer is a beverage that is obtained by fermentation from starchy substances and is not distilled. In the production of the carbonated beverage, hops or other seasonings are added, such as fruits, herbs or other spices.</string>
    <string name="add">Add</string>
    <string name="show_feedback_trace">Show information to send</string>
    <string name="and_your_IP_Adress">And your IP-Address.</string>
    <string name="drinking_beginning">Drinking beginning:</string>
    <string name="depleted_since">Depleted since:</string>
    <string name="create_backup">Create Backup</string>
    <string name="load_backup">Load Backup</string>
    <string name="goass" translatable="false">Goaß</string>
    <string name="cola" translatable="false">Cola</string>
    <string name="goassmass" translatable="false">Goaßmaß</string>
    <string name="pilsner" translatable="false">Pilsner</string>
    <string name="redcider" translatable="false">Red Cider</string>
    <string name="wine">Wine</string>
    <string name="whisky">Whisky</string>
    <string name="vodka">Vodka</string>
    <string name="sparklingwine">Sparkling Wine</string>
    <string name="hugo" translatable="false">Hugo</string>
    <string name="cherryliqueur">Cherry Liqueur</string>
    <string name="irishflag" translatable="false">Irish Flag</string>
    <string name="cremedeMenthe" translatable="false">Creme de Menthe</string>
    <string name="irishwhisky">Irish whisky</string>
    <string name="baileysirishcreme" translatable="false">Baileys Irish Creme</string>
</resources>
