<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:breathalyzer="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/recipes"
        android:title="@string/recipes"
        breathalyzer:showAsAction="ifRoom" />
    <item
        android:id="@+id/switchUser"
        android:title="@string/switch_user"
        breathalyzer:showAsAction="ifRoom" />
    <item
        android:id="@+id/newUser"
        android:title="@string/create_new_user"
        breathalyzer:showAsAction="ifRoom" />
    <item
        android:id="@+id/editUser"
        android:title="@string/edit_current_user"
        breathalyzer:showAsAction="ifRoom" />
    <item
        android:id="@+id/removeUser"
        android:title="@string/remove_current_user"
        breathalyzer:showAsAction="ifRoom" />
    <item
        android:id="@+id/sendFeedback"
        android:title="@string/send_feedback" />
    <item
        android:id="@+id/about"
        android:title="@string/about" />
</menu>