<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image"
        app:srcCompat="@mipmap/beer" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/no_information"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center"
                android:text="@string/drinking_beginning"
                android:textAlignment="center"
                android:textSize="14sp" />

            <View
                android:id="@+id/view"
                android:layout_width="25dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/drinking_beginning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center"
                android:text="@string/no_information"
                android:textAlignment="center"
                android:textSize="14sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center"
                android:text="@string/depleted_since"
                android:textAlignment="center"
                android:textSize="14sp" />

            <View
                android:layout_width="25dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/depleted_since"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:gravity="center"
                android:text="@string/no_information"
                android:textAlignment="center"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp" />
</LinearLayout>
